# arixv_fetcher

./: .env.example  DATABASE_CONFIG.md  Makefile  README.md  check_authors.py  check_database.py  check_db.py  check_emails.py  cleanup_db.py  direct_db_check.py  final_status_check.py  langgraph.json  pyproject.toml  pytest.ini  test_api_rotation.py  test_arxiv.py  test_cache_performance.py  test_email_extraction.py  test_fetch_by_id.py  test_final_verification.py  test_frontend_api.py  test_insert.py  test_latest_papers_api.py  test_new_papers.py  test_paper_processing.py  test_papers.json  test_resume_functionality.py  test_simple_cache.py  test_single_paper_email.py  test_supabase_connection.py  test_upload.json  test_upload_fix.py  trigger_processing.py
.langgraph_api/: .langgraph_ops.pckl
docs/: database_schema_design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
resource/: arxiv_workflow.md  db_schema.md  qs-world-rankings-2025.csv  supabase_sdk.md
resume_data/: sessions.json
resume_data/records/: batch_20250824_154508_records.json  batch_20250824_154817_records.json  batch_20250824_154854_records.json  batch_20250824_154929_records.json  batch_20250824_155028_records.json  batch_20250824_162224_records.json  batch_20250824_163002_records.json  batch_20250825_061252_records.json  batch_20250825_061339_records.json  batch_20250825_122557_records.json  batch_20250825_123207_records.json  batch_20250825_130503_records.json  batch_20250825_151356_records.json  (+2 more)
src/: main.py
src/agent/: __init__.py  (+9 more)
(+19 files in other folders)
